elyra-ai/pod_spark.yaml
---
  apiVersion: v1
  kind: Pod
  metadata:
    name: spark
    labels:
      app: spark
  spec:
    containers:
      - name: spark
        image: bitnami/kubectl
        command: ["/bin/bash", "-c", "while true; do echo 1; sleep 1; done"]
